--- a/snippets/ajax-cart-template.liquid
+++ b/snippets/ajax-cart-template.liquid
@@ -14,7 +14,7 @@
       <div class="ajaxcart__inner">
         {{#items}}
         <div class="ajaxcart__product">
-          <div class="ajaxcart__row" data-line="{{line}}" data-product='{
+          <div class="ajaxcart__row" data-line="{{line}}" data data-product='{
             "name": "{{name}}",
             "brand": "{{vendor}}",
             "category": "{{type}}",
