updating-cart-drawer-functionalities

--- a/snippets/ajax-cart-template.liquid
+++ b/snippets/ajax-cart-template.liquid
@@ -1,15 +1,13 @@
 {% comment %}
+  /snippets/ajax-cart-template.liquid
 
-/snippets/ajax-cart-template.liquid
-
-  This snippet provides the default handlebars.js templates for
-  the ajax cart plugin. Use the raw liquid tags to keep the
-  handlebar.js template tags as available hooks.
-
+    This snippet provides the default handlebars.js templates for
+    the ajax cart plugin. Use the raw liquid tags to keep the
+    handlebar.js template tags as available hooks.
 {% endcomment %}
-  <script id="CartTemplate" type="text/template">
+<script id="CartTemplate" type="text/template">
   {% raw %}
-		<h3 class="count-{{{cartCount}}}">{{{cartCount}}} item<span>s</span> in bag</h3>
+  <h3 class="count-{{{cartCount}}}">{{{cartCount}}} item<span>s</span> in bag</h3>
     <form action="/cart" method="post" novalidate class="cart ajaxcart">
       <div class="ajaxcart__inner">
         {{#items}}
@@ -34,7 +32,7 @@
                   {{#properties}}
                     {{#each this}}
                       {{#if this}}
-                        <span class="ajaxcart__product-meta mid">{{@key}}: {{this}}</span>
+                        <span class="ajaxcart__product-meta mid" data-is="{{this}}">{{@key}}: {{this}}</span>
                       {{/if}}
                     {{/each}}
                   {{/properties}}
@@ -57,11 +55,11 @@
                         <span class="hidden">{% endraw %}{{ 'cart.general.increase_quantity' | t }}{% raw %}</span>
                       </button>
                     </div>
-	                  {{#if discountsApplied}}
-	                      <span class="price"><span class="ajaxcart-item__price-strikethrough"><s>{{{originalLinePrice}}}</s></span>{{{linePrice}}}</span>
-	                    {{else}}
-	                      <span class="price">{{{linePrice}}}</span>
-	                    {{/if}}
+                   {{#if discountsApplied}}
+                       <span class="price"><span class="ajaxcart-item__price-strikethrough"><s>{{{originalLinePrice}}}</s></span>{{{linePrice}}}</span>
+                     {{else}}
+                       <span class="price">{{{linePrice}}}</span>
+                     {{/if}}
                   </div>
                   {{#if discountsApplied}}
 
@@ -129,8 +127,8 @@
       </div>
     </form>
   {% endraw %}
-  </script>
-  <script id="AjaxQty" type="text/template">
+</script>
+<script id="AjaxQty" type="text/template">
   {% raw %}
     <div class="ajaxcart__qty">
       <button type="button" class="ajaxcart__qty-adjust ajaxcart__qty--minus icon-fallback-text" data-id="{{key}}" data-qty="{{itemMinus}}">
@@ -146,8 +144,8 @@
       </button>
     </div>
   {% endraw %}
-  </script>
-  <script id="JsQty" type="text/template">
+</script>
+<script id="JsQty" type="text/template">
   {% raw %}
     <div class="js-qty">
       <button type="button" class="js-qty__adjust js-qty__adjust--minus icon-fallback-text" data-id="{{key}}" data-qty="{{itemMinus}}">
@@ -163,10 +161,10 @@
       </button>
     </div>
   {% endraw %}
-  </script>
-  
-  <style>
-    span.ajaxcart__product-meta.mid{
-      display:none !important;
-    }
-  </style>
+</script>
+
+<style>
+  span.ajaxcart__product-meta.mid {
+    display: none !important;
+  }
+</style>
