--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -156,6 +156,7 @@
                   </td>
                   <td class="remove text-right">
                     <button
+                      data-total-items="{{ item.quantity }}"
                       class="remove"
                       type="button"
                       data-line="{{ forloop.index }}"
