--- a/snippets/personalisation-functions.liquid
+++ b/snippets/personalisation-functions.liquid
@@ -13,13 +13,40 @@
   </div>`;
   document.body.insertAdjacentHTML('beforeend', extraChargeDiv);
 {% if template == 'cart' %}
+  const removePersonalisationCharge = (quantity) => {
+    const remainingChargeItem = document.querySelector("tr.personalisation-charge td.remove button.remove").getAttribute("data-total-items")
+    let formData = {
+      "id": "53479059259771",
+      "quantity": (parseInt(remainingChargeItem) - parseInt(quantity))
+    };
+    fetch(window.Shopify.routes.root + 'cart/change.js', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify(formData),
+    })
+      .then((response) => {
+        return response.json();
+      })
+      .catch((error) => {
+        console.error('Error:', error);
+      })
+  };
   if(document.querySelectorAll("tr[data-personalisation='true']")){
-    document.querySelectorAll("tr[data-personalisation='true'] button.js-qty__adjust--plus").forEach(plus=>{
-        plus.addEventListener("click",()=>{
-            localStorage.setItem("buttonClick", "niggi");
-            document.querySelector("tr.personalisation-charge button.js-qty__adjust--plus").click();
+    document.querySelectorAll("tr[data-personalisation='true'] td.remove button.remove").forEach(remove=>{
+      remove.addEventListener("click",()=>{
+        removePersonalisationCharge(remove.getAttribute("data-total-items"));
         })
     })
   }
 {% endif %}
+
+
+
+document.querySelectorAll("[data-is='personalized']").forEach(item=>{
+  item.closest(".ajaxcart__product").querySelector(".ajaxcart__qty--plus").addEventListener("click",()=>{
+    console.log("clicked");
+  })
+})
 </script>
