--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -542,5 +542,6 @@ window.TriplePixelData={TripleName:"chinti-parker.myshopify.com",ver:"2.12",plat
       {% render 'klaviyo-add_to_cart_event' %}
       <!-- Klaviyo add-to-cart js -->
     {% endif %}
+    {% render 'personalisation-functions' %}
   </body>
 </html>
